--- a/UmbracoStarterKitSite.csproj
+++ b/UmbracoStarterKitSite.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Umbraco.Cms" Version="14.3.0" />
+    <PackageReference Include="Umbraco.TheStarterKit" Version="14.0.0" />
   </ItemGroup>
 
   <ItemGroup>
