--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -24,6 +24,9 @@
       },
       "Hosting": {
         "Debug": true
+      },
+      "ModelsBuilder": {
+        "ModelsMode": "SourceCodeAuto"
       }
     }
   }
