Enable Content Delivery API.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -22,6 +22,9 @@
       "Content": {
         "MacroErrors": "Throw"
       },
+      "DeliveryApi": {
+        "Enabled": true
+      },
       "Hosting": {
         "Debug": true
       },
